--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,23 @@
+// {
+//   "root": true,
+//   "extends": "next",
+//   "rules": {
+//     "no-unused-vars": [
+//       "error",
+//       {
+//         "argsIgnorePattern": "^_",
+//         "varsIgnorePattern": "^_"
+//       }
+//     ],
+//     "react/display-name": 0
+//   }
+// }
+
 {
   "root": true,
   "extends": "next",
   "rules": {
-    "no-unused-vars": [
-      "error",
-      {
-        "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_"
-      }
-    ],
+    "no-unused-vars": "off",
     "react/display-name": 0
   }
 }
