--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   "extends": "next",
   "rules": {
     "no-unused-vars": "off",
+    "react/no-unescaped-entities": "off",
     "react/display-name": 0
   }
 }
